prevent scroll behind modal

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 .App {
+  height: 20000px;
   text-align: center;
 }
 
